<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_search"/>
    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"/>
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
</menu>
