<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/tvSetInfo_text"/>

    <Spinner android:id="@+id/spDicSpinner"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView android:id="@+id/tvSetWordsCount"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/tvSetWordsCount_text"
            android:layout_gravity="center"/>

        <Spinner android:id="@+id/spWordsCount"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel_text"
            android:textSize="15sp"/>

        <Button android:id="@+id/btnSetOk"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btnSetOk_text"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>